--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-polyfill": "^6.26.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-scripts": "3.2.0",
     "react-springy-parallax": "^1.3.0",
     "typed.js": "^2.0.11"
