--- a/package.json
+++ b/package.json
@@ -1,35 +1,52 @@
 {
   "name": "juandis-portfolio",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-responsive-carousel": "^3.1.51",
-    "react-scripts": "3.2.0",
-    "react-springy-parallax": "^1.3.0",
-    "typed.js": "^2.0.11"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc",
+    "prettier": "prettier --write src/",
+    "eslint": "eslint './src/**/*.{ts,tsx,js,jsx}'"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,md,yml}": [
+      "npm run prettier",
+      "eslint './src/**/*.{ts,tsx,js,jsx}",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@types/styled-components": "^5.1.4",
+    "next": "latest",
+    "react": "^17.0.1",
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/gtag.js": "0.0.3",
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-netflix": "^2.0.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
+    "typescript": "4.0"
   }
 }
