--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@types/styled-components": "^5.1.4",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/eslint-parser": "^7.13.10",
     "@types/gtag.js": "0.0.3",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
