--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-feather": "^2.0.9",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
