--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "eslint": "eslint './src/**/*.{ts,tsx,js,jsx}'"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,md,yml}": [
+    "src/**/*.{js,jsx,ts,tsx,json,yml}": [
       "npm run prettier",
       "eslint './src/**/*.{ts,tsx,js,jsx}",
+      "git add"
+    ],
+    "*.{md}": [
+      "prettier --write",
       "git add"
     ]
   },
