--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Juan David Pérez",
-  "name": "Juan David Pérez • Portfolio",
+  "name": "Juan David Pérez",
   "icons": [
     {
       "src": "favicon.ico",
