--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/react-dom": "^16.9.4",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.30.0",
     "eslint-config-netflix": "^2.0.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^6.15.0",
@@ -57,6 +57,6 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
-    "typescript": "4.0"
+    "typescript": "^4.3.2"
   }
 }
