--- a/package.json
+++ b/package.json
@@ -30,33 +30,33 @@
     "extends": "react-app"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.4",
-    "next": "latest",
-    "polished": "^4.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-feather": "^2.0.9",
-    "styled-components": "^5.2.0",
+    "@types/styled-components": "^5.1.26",
+    "next": "^13.4.3",
+    "polished": "^4.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "styled-components": "^5.3.10",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/eslint-parser": "^7.13.10",
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
     "@types/gtag.js": "0.0.3",
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
+    "@types/node": "^12.20.55",
+    "@types/react": "^16.14.41",
+    "@types/react-dom": "^16.9.19",
     "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.30.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
     "eslint-config-netflix": "^2.0.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint-config-next": "^11.1.4",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2",
-    "typescript": "^4.3.2"
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.8.8",
+    "typescript": "^4.9.5"
   }
 }
