--- a/package.json
+++ b/package.json
@@ -40,13 +40,19 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
     "@types/gtag.js": "0.0.3",
     "@types/node": "^12.20.55",
     "@types/react": "^16.14.41",
     "@types/react-dom": "^16.9.19",
     "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.5"
   }
 }
