--- a/package.json
+++ b/package.json
@@ -6,53 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc",
-    "prettier": "prettier --write src/",
-    "eslint": "eslint './src/**/*.{ts,tsx,js,jsx}'"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,yml}": [
-      "npm run prettier",
-      "eslint './src/**/*.{ts,tsx,js,jsx}",
-      "git add"
-    ],
-    "*.{md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "type-check": "tsc"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
     "next": "^13.4.3",
-    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "styled-components": "^5.3.10",
-    "use-dark-mode": "^2.3.1"
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
-    "@babel/eslint-parser": "^7.21.8",
     "@types/gtag.js": "0.0.3",
     "@types/node": "^12.20.55",
     "@types/react": "^16.14.41",
     "@types/react-dom": "^16.9.19",
     "cross-env": "^7.0.3",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.32.2",
-    "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.8.8",
     "typescript": "^4.9.5"
   }
 }
